<resources>
    <string name="app_name">GithubMemberApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title">GitHub Member</string>

    <string name="menu_home">Home</string>
    <string name="setting">Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user_name">User Name</string>
    <string name="change_language">Change Language</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="blog">Blog</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="hint">Type something here…</string>
    <string name="token">c603e2a6b21af3e2123a2a6d702c0b3b6f35b564</string>
    <string name="avatar_desc">avatar</string>
    <string name="twitter">twitter</string>
    <string name="website">website</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logo">logo</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="url">url</string>
    <string name="open_to_browser">Open to browser</string>
    <string name="setting_button">setting button</string>
    <string name="delete_button">delete button</string>
    <string name="add_failed_message">Failed to add</string>
    <string name="already_added">User Already added…</string>
    <string name="favourite" translatable="false">Favourite</string>
    <string name="github_repeat_alarm">GitHub Alarm</string>
    <string name="alarm_time" translatable="false">09.00</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="set_repeat_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
</resources>