<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/base_background"
    android:theme="@style/Theme.GithubMemberApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.detail.DetailUser">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_user_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:civ_border_width="2dp"
            android:padding="10dp"
            android:contentDescription="@string/avatar_desc"
            android:src="@drawable/ic_user_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_user_avatar"
            app:layout_constraintStart_toEndOf="@+id/detail_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/detail_user_avatar">

            <TextView
                android:id="@+id/name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingTop="5dp"
                android:text="@string/user_name"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="1dp"
                android:text="@string/company"
                app:drawableLeftCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="1dp"
                android:text="@string/location"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="1dp"
                android:text="@string/twitter"
                app:drawableStartCompat="@drawable/ic_twitter" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="1dp"
                android:text="@string/website"
                app:drawableStartCompat="@drawable/website" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        app:tabTextColor="?attr/colorOnPrimary"
        app:tabIndicatorColor="?attr/colorOnPrimary"
        app:tabBackground="@drawable/base_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>