<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/base_background"
    android:padding="16dp"
    tools:context=".ui.view.alarm.AlarmSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_repeating_time"
            android:fontFamily="@font/open_sans_bold"
            android:layout_width="wrap_content"
            android:textSize="80sp"
            android:layout_margin="70dp"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/alarm_message"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_repeating_alarm"
            android:backgroundTint="?attr/colorSecondary"
            android:theme="@style/Theme.GithubMemberApp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_repeat_alarm" />
    </LinearLayout>

</LinearLayout>